// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no features 1`] = `
<div
  className="DivSequenceRendering"
  style={
    Object {
      "fontSize": "12.8px",
      "height": "16px",
    }
  }
>
  <div
    className="blur"
  >
    Zoom in to see sequence
  </div>
</div>
`;

exports[`one feature with a correct seq, zoomed in, should render nicely 1`] = `
<div
  className="DivSequenceRendering"
  style={
    Object {
      "fontSize": "12.8px",
      "height": "16px",
    }
  }
>
  <div
    className="base base-a"
    style={
      Object {
        "width": "20px",
      }
    }
  >
    A
  </div>
  <div
    className="base base-b"
    style={
      Object {
        "width": "20px",
      }
    }
  >
    B
  </div>
  <div
    className="base base-c"
    style={
      Object {
        "width": "20px",
      }
    }
  >
    C
  </div>
  <div
    className="base base-d"
    style={
      Object {
        "width": "20px",
      }
    }
  >
    D
  </div>
  <div
    className="base base-e"
    style={
      Object {
        "width": "20px",
      }
    }
  >
    E
  </div>
  <div
    className="base base-f"
    style={
      Object {
        "width": "20px",
      }
    }
  >
    F
  </div>
  <div
    className="base base-g"
    style={
      Object {
        "width": "20px",
      }
    }
  >
    G
  </div>
  <div
    className="base base-h"
    style={
      Object {
        "width": "20px",
      }
    }
  >
    H
  </div>
  <div
    className="base base-i"
    style={
      Object {
        "width": "20px",
      }
    }
  >
    I
  </div>
</div>
`;

exports[`one feature with an incorrect seq, zoomed in, should throw 1`] = `
<h1
  className="error"
>
  Error: feature one did not contain a valid \`seq\` attribute
</h1>
`;

exports[`one feature with no seq, zoomed in, should throw 1`] = `
<h1
  className="error"
>
  Error: feature one did not contain a valid \`seq\` attribute
</h1>
`;

exports[`one feature with no seq, zoomed way out 1`] = `
<div
  className="DivSequenceRendering"
  style={
    Object {
      "fontSize": "12.8px",
      "height": "16px",
    }
  }
>
  <div
    className="blur"
  >
    Zoom in to see sequence
  </div>
</div>
`;
